-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
6.5
-
None
-
44894c579 (dev), 7e14e6c2d (dev), 2ad3da8fc (dev), b3cd75fde (6.6), efbcd5979 (6.6), fcb2ba3d9 (6.6), 8584881f9 (6.5), e04e3444b (6.5), 76e47f8c0 (6.5)
Accessibility uses AT-SPI2 on linux, but it cannot be enabled without xcb also being enabled. For Wayland use, it should be possible to enable accessibility_atspi_bridge feature also without X11 dependencies.
- relates to
-
QTBUG-73945 Accessibility broken under wayland
-
- Closed
-
| For Gerrit Dashboard: QTBUG-117535 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 508779,6 | cmake: remove xcb dependency for accessibility-atspi-bridge feature | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 508835,1 | client: Enable a11y(ATSPI) for Wayland | dev | qt/qtwayland | Status: ABANDONED | 0 | 0 |
| 509474,3 | a11y: fix the build without xcb headers | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 509475,2 | a11y: add runtime checking for xcb only calls | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 510155,2 | a11y: fix the build without xcb headers | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 510157,2 | cmake: remove xcb dependency for accessibility-atspi-bridge feature | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 510158,2 | a11y: add runtime checking for xcb only calls | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 510195,2 | a11y: fix the build without xcb headers | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |
| 510196,2 | a11y: add runtime checking for xcb only calls | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |
| 510197,2 | cmake: remove xcb dependency for accessibility-atspi-bridge feature | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |