a11y: add runtime checking for xcb only calls

This amends d23562da1c4cb525d4012bee55bd665c6cafef04 .

Task-number: QTBUG-117535
Change-Id: I33f97f3c26409a33c8a069f9dcdfe61bbd88e2ec
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit 7e14e6c2d3bb5297eefa273d5a23836c931c7517)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit efbcd597955d19abe838b4f9b544e41aed324214)